--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
     "class-is": "^1.0.0",
     "debug": "^3.1.0",
     "detect-node": "^2.0.3",
+    "dev": "^0.1.3",
     "epimetheus": "^1.0.55",
     "hapi": "^16.6.2",
     "inert": "^4.2.1",
     "interface-connection": "~0.3.2",
     "mafmt": "^6.0.0",
     "minimist": "^1.2.0",
+    "mocha": "^5.0.5",
     "multiaddr": "^4.0.0",
     "once": "^1.4.0",
     "peer-id": "~0.10.7",
